t staRevert "fix (column-block): fix horizontal scrolling when content align is applied on the block"
This reverts commit bdf0e0a9e90055ba8f6d2be9bfe4357b22216403.

--- a/src/block/column/style.scss
+++ b/src/block/column/style.scss
@@ -1,7 +1,7 @@
 @import "common";
 
 .stk-block.stk-block-column .stk-column-wrapper {
-	width: auto;
+	width: 100%;
 }
 .stk-block-column__content {
 	box-sizing: border-box;
